# octodns-bind

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml
docker/etc/bind/: dns.keys.conf  named.conf
docker/var/lib/bind/: db.xn--fa-hia.de.
octodns_bind/: __init__.py
script/: cibuild  cibuild-package  cibuild-setup-py  coverage  format  lint  release  sdist  test
tests/: test_provider_octodns_bind.py
tests/zones/: unit.tests.  unit.tests.tst
